<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pcpost"
            android:icon="@mipmap/pcpost"
            android:title="@string/pcpost" />
        <item
            android:id="@+id/nav_print"
            android:icon="@mipmap/print"
            android:title="@string/bluetoothprint" />
        <item
            android:id="@+id/nav_happy"
            android:icon="@mipmap/happy"
            android:title="@string/happytime" />
        <!--<item-->
            <!--android:id="@+id/nav_play"-->
            <!--android:icon="@mipmap/play"-->
            <!--android:title="@string/playmouse" />-->
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/my"
            android:title="@string/aboutus" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
