<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/inetadd"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/ip"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/Allow"
            android:checked="true"
            android:textColor="#0099FF"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:gravity="center_horizontal"
            android:textSize="15dp"
            android:layout_below="@+id/ip" />

        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_xiner"
            android:id="@+id/qrcode_bitmap"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Allow" />
        <LinearLayout
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="请容许对方权限控制"
                    android:textSize="20dp"
                    android:textColor="#999999"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkbox_download"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_download"
                    android:textSize="20dp" />
                <CheckBox
                    android:id="@+id/checkbox_upload"
                    android:checked="true"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_upload"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkbox_toasts"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_toast"
                    android:textSize="20dp" />

                <CheckBox android:id="@+id/checkbox_deletion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/button_delete"
                    android:textSize="20dp"
                    android:checked="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">
                <CheckBox android:id="@+id/checkbox_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_rename"
                    android:checked="true"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>